implemented methods improved, multiple clients managment impelemented, and make the client as a javaFX project